--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,11 @@
+p{
+    size: 500px;
+    font-style: normal;
+    color: crimson;
+}
+
 h1{
-    background-color: pink;
+    float: left;
+    border: 40px;
+    
 }
